fix spacing on edit page

--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -349,8 +349,8 @@ body {
   border: none;
   border-top: 1px solid #485563;
   border-bottom: 1px solid #697785;
-  margin-bottom: 35px;
-  margin-top: 35px;
+  margin-bottom: 65px;
+  margin-top: 55px;
 }
 .hrCharacterList {
   display: block;
